--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
-  google_fonts: ^1.1.0
+  http: ^0.13.1
+  google_fonts: ^2.0.0
+  cloud_firestore: ^1.0.1
+  firebase_core: ^1.0.2
+  firebase_auth: ^1.0.1
+  google_sign_in: ^5.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
